clusters/dextek/apps/monitoring/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  hostnames:
    - blackbox.plexuz.xyz
  parentRefs:
    - name: gateway-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: blackbox-exporter
          port: 9115
      matches:
        - path:
            type: PathPrefix
            value: /
